src/css/main.css
/* COLORS */
/* BASE */
body {
  background-color: #b8b8b8; }

h1, h2, h3, h4, h5, h6 {
  margin: 0px; }

p {
  margin: 0px; }

/* LAYOUT */
.calculator-body {
  width: 500px;
  height: 550px; }

.calculator-body .btn {
  width: 80px;
  height: 50px;
  font-size: 18px;
  color: white;
  text-align: center; }

main > div {
  overflow-x: scroll; }

@font-face {
  font-family: calculatorFont;
  src: url("../../fonts/calculatorFont/digital-7.ttf"); }
.calculator-display {
  font-family: calculatorFont;
  font-size: 50px;
  line-height: 1;
  text-align: right;
  background-color: #BAC6C0;
  border: 2px solid gray;
  border-radius: 5px; }
  .calculator-display div:first-child {
    color: #3f4040;
    min-height: 50px; }

.calculator-display span:not(:first-child) {
  border-left: 1px solid gray;
  height: 25px; }

/* FLEX TRICKS */
.flexed-1 {
  flex: 1; }

.flexed-2 {
  flex: 2; }

.flexed-3 {
  flex: 3; }

.flexed-4 {
  flex: 4; }

/* BORDERS & SHADOWS */
.calculator-borders {
  border: solid 3px #a7a7a7;
  border-radius: 5px;
  box-shadow: 5px 5px 20px #3f4040, 5px 5px 20px black; }

/* BUTTONS */
.keybord-number .btn {
  background-color: #a7a7a7; }

.keybord-operations .btn {
  background-color: #3f4040; }

.btn {
  box-shadow: 0px 3px 3px black; }

.btn:focus {
  box-shadow: 0px 3px 3px black; }

.btn-sci {
  background-color: #82679e; }

/* BTN 3D EFFECT */
.btn:active {
  transition: 0s;
  position: relative;
  top: 3px;
  box-shadow: 0px 0px 0px black; }

/* FUNNY FONT */
.signatureLuka {
  font-family: 'Amatic SC', cursive;
  font-size: 2rem; }

/*# sourceMappingURL=main.css.map */

